--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
       </div>
       <div class="button">
          <div class="icon">
-            <i class="fab fa-google"></i>
+            <i class="fa fa-envelope"></i>
          </div>
-         <a href="mailto: Heyajerry@gmail.com">
+         <a href="mailto: android@jerryspace.ml">
          <span>Gmail</span></a>
       </div>
       <div class="button">
