--- a/index.html
+++ b/index.html
@@ -147,39 +147,46 @@
     <div class="wrapper">
       <div class="button">
         <div class="icon">
-         <i class="fab fa-facebook-f"></i>
+         <i class="fab fa-facebook-f" aria-hidden="true"></i>
         </div>
          <a href="https://www.facebook.com/heyajerry07" target="_blank">
          <span>Facebook</span></a>
       </div>
       <div class="button">
          <div class="icon">
-            <i class="fa fa-envelope"></i>
+            <i class="fa fa-envelope" aria-hidden="true"></i>
          </div>
          <a href="mailto: android@jerryspace.ml">
          <span>Gmail</span></a>
       </div>
       <div class="button">
          <div class="icon">
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-instagram" aria-hidden="true"></i>
          </div>
          <a href="https://www.instagram.com/heyajerry/" target="_blank">
          <span>Instagram</span></a>
       </div>
       <div class="button">
          <div class="icon">
-            <i class="fab fa-github"></i>
+            <i class="fab fa-github" aria-hidden="true"></i>
          </div>
          <a href="https://github.com/JerryIs-strong" target="_blank">
          <span>Github</span></a>
       </div>
       <div class="button">
          <div class="icon">
-            <i class="fab fa-youtube"></i>
+            <i class="fab fa-youtube" aria-hidden="true"></i>
          </div>
          <a href="https://www.youtube.com/ldzmusic_studio" target="_blank">
          <span>YouTube</span></a>
       </div>
+      <div class="button">
+        <div class="icon">
+           <i class="fa fa-link" aria-hidden="true"></i>
+        </div>
+        <a href="https://nr2z-my.sharepoint.com/:f:/g/personal/like_dz_nr2z_onmicrosoft_com/EuZpWHLHwQNLo-tEJewWjBoBT0Y58h-a-6tpFkrp661uag" target="_blank">
+        <span>Tool</span></a>
+     </div>
    </div>
       <span class="ContactTag"><span class="ContactTagadd">@</span>Heyajerry</span>
       <img src="./Resources/Bgimg/03.png" class="Bgimgh02" id="Bgimgh02" />
