--- a/404.html
+++ b/404.html
@@ -5,12 +5,11 @@
        <meta charset="UTF-8">
        <link rel="shortcut icon" type="image/ico" href="./icon.png"> <!--Favicon for Chrome-->
        <link rel="apple-touch-icon" href="./icon.png"> <!--Favicon for Safari-->
-       <link rel="shortcut icon" type="image/ico" href="https://jerryis-strong.github.io/jerrypro/icon.png"> <!--Favicon for Chrome, When out of root file-->
-       <link rel="apple-touch-icon" href="https://jerryis-strong.github.io/jerrypro/icon.png"> <!--Favicon for Safari, When out of root file-->
+       <link rel="shortcut icon" type="image/ico" href="https://jerrypro.xyz/icon.png"> <!--Favicon for Chrome, When out of root file-->
+       <link rel="apple-touch-icon" href="https://jerrypro.xyz/icon.png"> <!--Favicon for Safari, When out of root file-->
        <script type="application/javascript" src="./JS/rightclick.js"></script>
-       <script type="application/javascript" src="https://jerryis-strong.github.io/jerrypro/JS/rightclick.js"></script>
-       <link rel="stylesheet" href="./CSS/20220826_404.css">
-       <link rel="stylesheet" href="https://jerryis-strong.github.io/jerrypro/CSS/20220826_404.css">
+       <script type="application/javascript" src="https://jerrypro.xyz/JS/rightclick.js"></script>
+       <link rel="stylesheet" href="https://jerrypro.xyz/CSS/20220826_404.css">
     </head>
 
     <body>
@@ -21,7 +20,7 @@
         <p class="text">What can I do? Make sure you entered the correct URL, and try refreshing or report the problem to us.</p>
         <p class="complete text">0% complete</p>
         <div class="footer">
-        <a href="https://jerryis-strong.github.io/jerrypro/"><img src="https://jerryis-strong.github.io/jerrypro/Resources/error/error_qr.png"/></a>
+        <a href="https://jerrypro.xyz"><img src="https://jerrypro.xyz/Resources/error/error_qr.png"/></a>
         <p class="p">It seems that you have some problems, you can go back to the home page to find solutions</p><br/>
         <p class="ep">If you call a support person, give them this info:</p><br/>
         <p class="ep">ERROR code: HTTPS ERROR 404 Not Found</p>
