--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
          <div class="icon">
             <i class="fa fa-envelope" aria-hidden="true"></i>
          </div>
-         <a href="mailto: android@jerryspace.ml">
+         <a href="mailto: info@jerrypro.xyz">
          <span>Gmail</span></a>
       </div>
       <div class="button">
