--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
  
 <div id="Goabout">
   <div class="Bg001" id="Bg01">
-    <h3 class="PartTitle" id="PT">About</h3>
+    <a href="#Goabout"><h3 class="PartTitle" id="PT">About</h3></a>
     <span class="underline1"></span>
     <div class="tagBox">
       <span>科技宅</span>
@@ -92,7 +92,7 @@
 
   <div id="Goproject">
    <div class="Bg002" id="Bg02">
-    <h3 class="PartTitle">Project</h3>
+    <a href="#Goproject"><h3 class="PartTitle">Project</h3></a>
     <span class="underline1"></span>
     <div class="tagBox">
       <span>JERRY Tool</span>
@@ -121,7 +121,7 @@
   
 <div id="Golinktree">
   <div class="Bg001" id="Bg01">
-    <h3 class="PartTitle">My Link Tree</h3>
+    <a href="#Golinktree"><h3 class="PartTitle">My Link Tree</h3></a>
     <span class="underline1"></span>
   <div class="LtreeAll">
     <h6 class="LinkTitle">JERRY://Website | In development</h6>
@@ -141,7 +141,7 @@
   
   <div id="Gocontact">
    <div class="Bg002" id="Bg02">
-    <h3 class="PartTitle">Contact</h3>
+    <a href="#Gocontact"><h3 class="PartTitle">Contact</h3></a>
     <span class="underline1"></span>
 
     <div class="wrapper">
@@ -193,9 +193,9 @@
    </div>
   </div>
   
-  <div id="Goproject">
+  <div id="Goxiaomi">
    <div class="Bg001" id="Bg001">
-    <h3 class="PartTitle">2022 雷軍年度演講(BiliBili)同步直播</h3>
+    <a href="#Goxiaomi"><h3 class="PartTitle">2022 雷軍年度演講(BiliBili)同步直播</h3></a>
     <span class="underline1"></span>
     <!--<center><iframe style="width: 700px;height: 400px;" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=545342&quality=0" frameborder="no"    framespacing="0" scrolling="no" allow="autoplay; encrypted-media; muted" allowfullscreen="true"></iframe></center>--> <!--Code form Bilibili-->
   <div class="slideshow-container" id="slideshow-container">
@@ -289,7 +289,7 @@
      <center><b><h3 style="font-size: 30px;">小站"大"記</b></h3>
      <span class="underline1"></span>
      <p class="tip">Swipe left or right to view more</p></center>
-    <div class="logBoxOuter">
+    <div class="logBoxOuter" id="logBoxOuter">
       <div id="logBox"> 
         <div>
           <p class="logText1">2022.08.03</p>
