--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=DynaPuff&family=Palanquin+Dark&family=Shippori+Antique+B1&Roboto:wght@500&family=Silkscreen&display=swap" rel="stylesheet">
 </head>
 
-<body class="" id="HW" oncontextmenu="return false;">
+<body class="" id="HW" oncontextmenu="return false;" onload="Themebgloder()">
+  <script type="text/javascript" src="./JS/main.js">Changebg();</script> 
   <div id="Sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
     <a href="#Goabout" class="navLink" onclick="closeNav()">About</a>
@@ -25,7 +26,6 @@
     <a href="#Gocontact" class="navLink" onclick="closeNav()">Contact</a>
     <a class="navLink" onclick="closeNav(),changeTheme()">Change Theme</a>
   </div>
-  
   
   
   <div class="topBG" id="topBG">
