--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body class="" id="HW" oncontextmenu="return false;" onload="Themebgloder(),appleBg()">
+  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
   <script type="text/javascript" src="./JS/main.js">Changebg();</script> 
   <div id="Sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
