--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <script type="application/javascript" src="./JS/mJudger.js"></script>
 <script type="application/javascript" src="./JS/console.js"></script>
 <script type="application/javascript" src="./JS/main.js"></script>
-<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 <link rel="stylesheet" href="./CSS/20220810.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,8 +25,10 @@
     <a href="#Golinktree" class="navLink" onclick="closeNav()">Link Tree</a>
     <a href="#Gocontact" class="navLink" onclick="closeNav()">Contact</a>
     <a class="navLink" onclick="closeNav(),changeTheme()">Change Theme</a>
+    <img class="Jerry-sound" src="./Resources/icon/tech.png" />
   </div>
-  
+
+  <div id="Sidebar-mask" class="Sidebar-mask"></div>
   
   <div class="topBG" id="topBG">
   
