--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <img class="Jerry-sound" src="./Resources/icon/tech.png" />
   </div>
 
-  <div id="Sidebar-mask" class="Sidebar-mask"></div>
+  <div id="Sidebar-mask" class="Sidebar-mask" onclick="closeNav()"></div>
+
   
   <div class="topBG" id="topBG">
   
