--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <button class="Ltree" onclick="link3()"><a href="https://www.youtube.com/ldzmusic_studio">LDZ Music</a></button>
     <h6 class="LinkTitle">JERRY://More</h6>
       <button class="Ltree" id="ltreengl" onclick="link4()"><a href="https://ngl.link/heyajerry23446"><img class="ngl" src="./Resources/icon/ngl.png"/> Link</a></button>
-      <button class="Ltree" id="ltreeng2" onclick="MusicOpen()"><a> Music</a></button>
+      <button class="Ltree" id="ltreeng2" onclick="error()"><a id="Ltree-music"> Music</a></button>
       <div class="musicinfo" id="musicinfo" onclick="MusicOpen()"><div class="music-inline"><img src="./Resources/audio/cover.jpg"/><audio controls src="./Resources/audio/Leaving You.mp3" ></audio><p class="musictitle" id="musictitle">離開你以後</p></div></div>
   </div>
   <img class="Bgimg01" id="Bgimg01" src="./Resources/Bgimg/04.png" />
