--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
     <span class="underline1"></span>
   <div class="LtreeAll">
     <h6 class="LinkTitle">JERRY://Website | In development</h6>
-      <button class="Ltree" onclick="link1()"><a href="https://jerrytool.w3spaces.com/" class="Link">JERRY://Tool</a></button>
-      <button class="Ltree" onclick="link2()"><a href="https://sites.google.com/view/jerrrtoolstate/home?authuser=0" class="Link">Tool://State</a></button>
+      <a href="https://jerrytool.w3spaces.com/"><button class="Ltree"><div class="Link">JERRY://Tool</div></button></a>
+      <a href="https://sites.google.com/view/jerrrtoolstate/home?authuser=0"><button class="Ltree"><div class="Link">Tool://State</div></button></a>
     <h6 class="LinkTitle">JERRY://Project | Fact Studio</h6>
-      <button class="Ltree" onclick="link3()"><a href="https://www.youtube.com/ldzmusic_studio">LDZ Music</a></button>
+      <a  href="https://www.youtube.com/ldzmusic_studio"><button class="Ltree"><div class="Link">LDZ Music</div></button></a>
     <h6 class="LinkTitle">JERRY://More</h6>
-      <button class="Ltree" id="ltreengl" onclick="link4()"><a href="https://ngl.link/heyajerry23446"><img class="ngl" src="./Resources/icon/ngl.png"/> Link</a></button>
-      <button class="Ltree" id="ltreeng2" onclick="error()"><a id="Ltree-music"> Music</a></button>
+      <a href="https://ngl.link/heyajerry23446"><button class="Ltree" id="ltreengl"><div class="Link"><img class="ngl" src="./Resources/icon/ngl.png"/> Link</div></button></a>
+      <button class="Ltree" id="ltreeng2" onclick="error()"><a id="Ltree-music" class="Link"> Music</a></button>
       <div class="musicinfo" id="musicinfo" onclick="MusicOpen()"><div class="music-inline"><img src="./Resources/audio/cover.jpg"/><audio controls src="./Resources/audio/Leaving You.mp3" ></audio><p class="musictitle" id="musictitle">離開你以後</p></div></div>
   </div>
   <img class="Bgimg01" id="Bgimg01" src="./Resources/Bgimg/04.png" />
@@ -197,11 +197,11 @@
   </div>
   
   <div id="Goxiaomi">
-   <div class="Bg001" id="Bg001">
-    <a href="#Goxiaomi"><h3 class="PartTitle">2022 雷軍年度演講(BiliBili)同步直播</h3></a>
+   <div class="Bg001" id="Bg001-iframe">
+    <a href="#Goxiaomi"><h3 class="PartTitle">2022 Note12 系列發布會(BiliBili)同步直播</h3></a>
     <span class="underline1"></span>
-    <!--<center><iframe style="width: 700px;height: 400px;" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=545342&quality=0" frameborder="no"    framespacing="0" scrolling="no" allow="autoplay; encrypted-media; muted" allowfullscreen="true"></iframe></center>--> <!--Code form Bilibili-->
-  <div class="slideshow-container" id="slideshow-container">
+    <center><iframe style="width: 100%;height: 400px;" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=22822257&quality=0" frameborder="no" framespacing="0" scrolling="no" allow="autoplay; encrypted-media; muted" allowfullscreen="true"></iframe></center> <!--Code form Bilibili-->
+  <!-- <div class="slideshow-container" id="slideshow-container">
   <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
     <img src="./Resources/pic20220811.png" style="width:100%" alt="永遠相信美好的事情，即將發生">
@@ -225,7 +225,7 @@
   
   <a class="prev" onclick="plusSlides(-1)">❮</a>
   <a class="next" onclick="plusSlides(1)">❯</a>
-  </div>
+  </div> -->
   </div>
   </div>
   
@@ -266,17 +266,17 @@
         <div data-mobiletext="Quarter 2" data-index="3" class="quarter q2 y2017 dot"></div>
         <div data-mobiletext="Quarter 3" data-index="4" class="quarter q3 y2017 dot"></div>
         <div data-mobiletext="Quarter 4" data-index="5" class="quarter q4 y2017 dot"></div>
-        <div data-mobiletext="NEXT" data-timelinelabel="期待..." data-index="6" class="year y2018 dot"></div>
+        <div data-mobiletext="October" data-timelinelabel="影像覺醒 - Redmi Note12 Series🛠️" data-index="6" class="year y2018 dot"></div>
         <div data-mobiletext="Quarter 1" data-index="6" class="quarter q1 y2018 dot"></div>			
         <div data-mobiletext="Quarter 2" data-index="7" class="quarter q2 y2018 dot"></div>
         <div data-mobiletext="Quarter 3" data-index="8" class="quarter q3 y2018 dot"></div>
         <div data-mobiletext="Quarter 4" data-index="9" class="quarter q4 y2018 dot"></div>
-        <div data-mobiletext="NEXT" data-timelinelabel="期待..." data-index="10" class="year y2019 dot"></div>
+        <div data-mobiletext="NEXT" data-timelinelabel="NEXT..." data-index="10" class="year y2019 dot"></div>
         <div data-mobiletext="Quarter 1" data-index="10" class="quarter q1 y2019 dot"></div>			
         <div data-mobiletext="Quarter 2" data-index="11" class="quarter q2 y2019 dot"></div>
         <div data-mobiletext="Quarter 3" data-index="12" class="quarter q3 y2019 dot"></div>
         <div data-mobiletext="Quarter 4" data-index="13" class="quarter q4 y2019 dot"></div>
-        <div data-mobiletext="NEXT" data-timelinelabel="期待..." data-index="14" class="year y2020 dot"></div>
+        <div data-mobiletext="NEXT" data-timelinelabel="NEXT..." data-index="14" class="year y2020 dot"></div>
         <div data-mobiletext="Quarter 1" data-index="14" class="quarter q1 y2020 dot"></div>
     </div>
   </section>
@@ -322,18 +322,6 @@
     </div>
   </div>
   </div>
-
-  <!--<div class="moreabout" id="moreabout">
-    <details>
-      <summary>More About 1</summary>
-      <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
-    </details>
-  
-    <details class="haa2">
-      <summary>More About 2</summary>
-      <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
-    </details>
-  </div>-->
   
   <div style="position:relative;" class="famousCard">
     <div class="FootCard">
