--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-TW" class="theme-blue">
 <head>
-<title>JERRY PRO :: 靜水流深</title>
+<title>JERRY PRO :: (～￣▽￣)～</title>
 <meta charset="UTF-8">
 <link rel="shortcut icon" type="image/ico" href="./icon.png"> <!--Favicon for Chrome-->
 <link rel="apple-touch-icon" href="./icon.png"> <!--Favicon for Safari-->
@@ -45,7 +45,7 @@
         </ul>
       </nav>
       <button class="openbtn" onclick="openNav()" id="closeNav">☰</button> 
-      <a><button onclick="Snackbar()" class="buttonTop">靜水流深</button></a>
+      <a><button onclick="Snackbar()" class="buttonTop">(～￣▽￣)～</button></a>
       <div id="snackbar">青出於藍，而勝於藍！</div>
     </div>
   
