--- a/index.html
+++ b/index.html
@@ -198,16 +198,16 @@
   
   <div id="Goxiaomi">
    <div class="Bg001" id="Bg001-iframe">
-    <a href="#Goxiaomi"><h3 class="PartTitle">2022 Note12 系列發布會(BiliBili)同步直播</h3></a>
+    <a href="#Goxiaomi"><h3 class="PartTitle">(BiliBili)同步直播</h3></a>
     <span class="underline1"></span>
-    <center><iframe style="width: 100%;height: 400px;" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=22822257&quality=0" frameborder="no" framespacing="0" scrolling="no" allow="autoplay; encrypted-media; muted" allowfullscreen="true"></iframe></center> <!--Code form Bilibili-->
-  <!-- <div class="slideshow-container" id="slideshow-container">
+    <!-- <center><iframe style="width: 100%;height: 400px;" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=22822257&quality=0" frameborder="no" framespacing="0" scrolling="no" allow="autoplay; encrypted-media; muted" allowfullscreen="true"></iframe></center> Code form Bilibili -->
+  <div class="slideshow-container" id="slideshow-container">
   <div class="mySlides fade">
-    <div class="numbertext">1 / 4</div>
-    <img src="./Resources/pic20220811.png" style="width:100%" alt="永遠相信美好的事情，即將發生">
+    <div class="numbertext">1 / 1</div>
+    <img id="m-silde" src="./Resources/Slideshowimg/J01.png" style="width:100%" alt="永遠相信美好的事情，即將發生">
   </div>
   
-  <div class="mySlides fade">
+  <!-- <div class="mySlides fade">
     <div class="numbertext" style="color: black;">2 / 4</div>
     <img src="./Resources/Slideshowimg/01.png" style="width:100%" alt="做米粉心中，最酷的公司">
   </div>
@@ -221,11 +221,11 @@
   <div class="mySlides fade">
     <div class="numbertext">4 / 4</div>
     <img src="./Resources/Slideshowimg/03.png" style="width:100%" alt="一往無前，衝破自我">
-  </div>
-  
-  <a class="prev" onclick="plusSlides(-1)">❮</a>
-  <a class="next" onclick="plusSlides(1)">❯</a>
   </div> -->
+  
+  <!-- <a class="prev" onclick="plusSlides(-1)">❮</a>
+  <a class="next" onclick="plusSlides(1)">❯</a> -->
+  </div>
   </div>
   </div>
   
@@ -266,7 +266,7 @@
         <div data-mobiletext="Quarter 2" data-index="3" class="quarter q2 y2017 dot"></div>
         <div data-mobiletext="Quarter 3" data-index="4" class="quarter q3 y2017 dot"></div>
         <div data-mobiletext="Quarter 4" data-index="5" class="quarter q4 y2017 dot"></div>
-        <div data-mobiletext="October" data-timelinelabel="影像覺醒 - Redmi Note12 Series🛠️" data-index="6" class="year y2018 dot"></div>
+        <div data-mobiletext="October" data-timelinelabel="影像覺醒 - Redmi Note12 Series✅" data-index="6" class="year y2018 dot"></div>
         <div data-mobiletext="Quarter 1" data-index="6" class="quarter q1 y2018 dot"></div>			
         <div data-mobiletext="Quarter 2" data-index="7" class="quarter q2 y2018 dot"></div>
         <div data-mobiletext="Quarter 3" data-index="8" class="quarter q3 y2018 dot"></div>
