--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=DynaPuff&family=Palanquin+Dark&family=Shippori+Antique+B1&Roboto:wght@500&family=Silkscreen&display=swap" rel="stylesheet">
 </head>
 
-<body class="" id="HW" oncontextmenu="return false;" onload="Themebgloder(),appleBg()">
+<body class="" id="HW" oncontextmenu="return false;" onload="Themebgloder(),appleBg(),bplayer()">
   <script type="text/javascript" src="./JS/main.js">Changebg();</script> 
   <div id="Sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
@@ -196,66 +196,18 @@
    </div>
   </div>
   
-  <div id="Goxiaomi">
+ <div id="Goxiaomi">
    <div class="Bg001" id="Bg001-iframe">
     <a href="#Goxiaomi"><h3 class="PartTitle">(BiliBili)同步直播</h3></a>
     <span class="underline1"></span>
-    <!-- <center><iframe style="width: 100%;height: 400px;" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=22822257&quality=0" frameborder="no" framespacing="0" scrolling="no" allow="autoplay; encrypted-media; muted" allowfullscreen="true"></iframe></center> Code form Bilibili -->
-  <div class="slideshow-container" id="slideshow-container">
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 1</div>
-    <img id="m-silde" src="./Resources/Slideshowimg/J01.png" style="width:100%" alt="永遠相信美好的事情，即將發生">
+    <!-- <center class="play-ture" id="bilibili-player"><iframe style="width: 100%;height: 400px;" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=22822257&quality=0" frameborder="no" framespacing="0" scrolling="no" allow="autoplay; encrypted-media; muted" allowfullscreen="true"></iframe></center> Code form Bilibili -->
+   <div class="slideshow-container" id="slideshow-container">
+   <div class="Slides fade">
+    <img id="m-silde" src="./Resources/J01.png" style="width:100%" alt="JERRY PRO">
+   </div>
+   </div>
+   </div>
   </div>
-  
-  <!-- <div class="mySlides fade">
-    <div class="numbertext" style="color: black;">2 / 4</div>
-    <img src="./Resources/Slideshowimg/01.png" style="width:100%" alt="做米粉心中，最酷的公司">
-  </div>
-  
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 4</div>
-    <img src="./Resources/Slideshowimg/02.png" style="width:100%" alt="永生生不息，引領未來">
-  </div>
-  
-  
-  <div class="mySlides fade">
-    <div class="numbertext">4 / 4</div>
-    <img src="./Resources/Slideshowimg/03.png" style="width:100%" alt="一往無前，衝破自我">
-  </div> -->
-  
-  <!-- <a class="prev" onclick="plusSlides(-1)">❮</a>
-  <a class="next" onclick="plusSlides(1)">❯</a> -->
-  </div>
-  </div>
-  </div>
-  
-  <script>
-  let slideIndex = 1;
-  showSlides(slideIndex);
-  
-  function plusSlides(n) {
-    showSlides(slideIndex += n);
-  }
-  
-  function currentSlide(n) {
-    showSlides(slideIndex = n);
-  }
-  
-  function showSlides(n) {
-    let i;
-    let slides = document.getElementsByClassName("mySlides");
-    let dots = document.getElementsByClassName("dot");
-    if (n > slides.length) {slideIndex = 1}    
-    if (n < 1) {slideIndex = slides.length}
-    for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";  
-    }
-    for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-    }
-    slides[slideIndex-1].style.display = "block";  
-  }
-  </script>
   
   <section id="timeline">
     <div class="section-wrapper">
@@ -263,10 +215,10 @@
         <div data-mobiletext="Quarter 4" data-index="1" class="quarter q4 y2016 dot complete"></div>
         <div data-mobiletext="August" data-timelinelabel="雷軍年度演講✅" data-index="2" class="year y2017 dot complete"></div>
         
-        <div data-mobiletext="Quarter 2" data-index="3" class="quarter q2 y2017 dot"></div>
-        <div data-mobiletext="Quarter 3" data-index="4" class="quarter q3 y2017 dot"></div>
-        <div data-mobiletext="Quarter 4" data-index="5" class="quarter q4 y2017 dot"></div>
-        <div data-mobiletext="October" data-timelinelabel="影像覺醒 - Redmi Note12 Series✅" data-index="6" class="year y2018 dot"></div>
+        <div data-mobiletext="Quarter 2" data-index="3" class="quarter q2 y2017 dot complete"></div>
+        <div data-mobiletext="Quarter 3" data-index="4" class="quarter q3 y2017 dot complete"></div>
+        <div data-mobiletext="Quarter 4" data-index="5" class="quarter q4 y2017 dot complete"></div>
+        <div data-mobiletext="October" data-timelinelabel="影像覺醒 - Redmi Note12 Series✅" data-index="6" class="year y2018 dot complete"></div>
         <div data-mobiletext="Quarter 1" data-index="6" class="quarter q1 y2018 dot"></div>			
         <div data-mobiletext="Quarter 2" data-index="7" class="quarter q2 y2018 dot"></div>
         <div data-mobiletext="Quarter 3" data-index="8" class="quarter q3 y2018 dot"></div>
