--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   
   <div class="Bg001foot" id="Bg001foot">
    <div id="log">
-     <center><b><h3 style="font-size: 30px;">小站"大"記</b></h3>
+     <center><b><h3 style="font-size: 30px;">Enjoy every moment</b></h3>
      <span class="underline1"></span>
      <p class="tip">Swipe left or right to view more</p></center>
     <div class="logBoxOuter" id="logBoxOuter">
