--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <script type="text/javascript" src="./JS/main.js">Changebg();</script> 
   <div id="Sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="#Goabout" class="navLink" onclick="closeNav()">About</a>
-    <a href="#Goproject" class="navLink" onclick="closeNav()">Project</a>
-    <a href="#Golinktree" class="navLink" onclick="closeNav()">Link Tree</a>
-    <a href="#Gocontact" class="navLink" onclick="closeNav()">Contact</a>
-    <a class="navLink" onclick="closeNav(),changeTheme()">Change Theme</a>
+    <a href="#Goabout" class="navLink" onclick="closeNav()"><i class="fa fa-heartbeat" aria-hidden="true"></i>About</a>
+    <a href="#Goproject" class="navLink" onclick="closeNav()"><i class="fa fa-window-restore" aria-hidden="true"></i>Project</a>
+    <a href="#Golinktree" class="navLink" onclick="closeNav()"><i class="fa fa-link" aria-hidden="true"></i>Link Tree</a>
+    <a href="#Gocontact" class="navLink" onclick="closeNav()"><i class="fa fa-envelope" aria-hidden="true"></i>Contact</a>
+    <a class="navLink" onclick="closeNav(),changeTheme()"><i class="fa fa-flask" aria-hidden="true"></i>Change Theme</a>
     <img class="Jerry-sound" src="./Resources/icon/tech.png" />
   </div>
 
@@ -206,7 +206,7 @@
     <!-- <center class="play-ture" id="bilibili-player"><iframe style="width: 100%;height: 400px;" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=22822257&quality=0" frameborder="no" framespacing="0" scrolling="no" allow="autoplay; encrypted-media; muted" allowfullscreen="true"></iframe></center> Code form Bilibili -->
    <div class="slideshow-container" id="slideshow-container">
    <div class="Slides fade">
-    <img id="m-silde" src="./Resources/Slideshowimg/J01.png" style="width:100%" alt="JERRY PRO">
+    <img id="m-silde" src="./Resources/J01.png" style="width:100%" alt="JERRY PRO">
    </div>
    </div>
    </div>
