--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script type="application/javascript" src="./JS/mJudger.js"></script>
 <script type="application/javascript" src="./JS/console.js"></script>
 <script type="application/javascript" src="./JS/main.js"></script>
+<script src="https://kit.fontawesome.com/9af6347b73.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="./CSS/20220810.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,11 +37,11 @@
       <img class="logo" src="icon.png" alt="logo" id="logo" />
       <nav>
         <ul class="navLinkBox" id="navLinkBox">
-          <li><a href="#Goabout" class="navLink">About</a></li>
-          <li><a href="#Goproject" class="navLink" id="navLinkHide">Project</a></li>
-          <li><a href="#Golinktree" class="navLink" id="navLinkHide">Link Tree</a></li>
-          <li><a href="#Gocontact" class="navLink">Contact</a></li>
-          <li><a onclick="changeTheme()" class="navLink">Theme</a></li>
+          <li><a href="#Goabout" class="navLink"><i class="fa-solid fa-heart-pulse"></i>About</a></li>
+          <li><a href="#Goproject" class="navLink" id="navLinkHide"><i class="fa-solid fa-window-restore"></i>Project</a></li>
+          <li><a href="#Golinktree" class="navLink" id="navLinkHide"><i class="fa-solid fa-link"></i>Link Tree</a></li>
+          <li><a href="#Gocontact" class="navLink"><i class="fa-regular fa-comments"></i>Contact</a></li>
+          <li><a onclick="changeTheme()" class="navLink"><i class="fa-sharp fa-solid fa-code"></i>Theme</a></li>
         </ul>
       </nav>
       <button class="openbtn" onclick="openNav()" id="closeNav">☰</button> 
@@ -77,7 +78,7 @@
     </div>
     <div class="textContent">
       <div class="aboutTyping" id="aboutTyping">
-        <div class="fixedText">JERRY的<span class="TypingText"></span></div>
+        <div class="fixedText"><i class="fa-regular fa-hard-drive"></i> JERRY的<span class="TypingText"></span></div>
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <script type="application/javascript" src="./JS/typing.js"></script>
       </div>
@@ -206,7 +207,7 @@
     <!-- <center class="play-ture" id="bilibili-player"><iframe style="width: 100%;height: 400px;" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=22822257&quality=0" frameborder="no" framespacing="0" scrolling="no" allow="autoplay; encrypted-media; muted" allowfullscreen="true"></iframe></center> Code form Bilibili -->
    <div class="slideshow-container" id="slideshow-container">
    <div class="Slides fade">
-    <img id="m-silde" src="./Resources/Slideshowimg/J01.png" style="width:100%" alt="JERRY PRO">
+    <img id="m-silde" src="./Resources/J01.png" style="width:100%" alt="JERRY PRO">
    </div>
    </div>
    </div>
