--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
         </ul>
       </nav>
       <button class="openbtn" onclick="openNav()" id="closeNav">☰</button> 
-      <a><button onclick="Snackbar()" class="buttonTop">(～￣▽￣)～</button></a>
+      <a><button onclick="musicPlayerChecker()" class="buttonTop" id="buttonTop">(～￣▽￣)～</button></a>
       <div id="snackbar">青出於藍，而勝於藍！</div>
+      <div style="display: none;">
+        <audio class="musicPlayer" id="musicPlayer" src="https://jerrypro.xyz/Resources/audio/cici_%20-%20%E8%87%B3%E5%B0%91%E9%82%84%E6%9C%89%E4%BD%A0(%E6%BA%AB%E6%9F%94%E7%89%88).mp3"></audio>
+      </div>
     </div>
-  
-  
   
       <!--<div class="image-container">
           <div class="text">JERRY'S <span class="Typingtext"></span></div>
@@ -207,7 +208,7 @@
     <!-- <center class="play-ture" id="bilibili-player"><iframe style="width: 100%;height: 400px;" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=22822257&quality=0" frameborder="no" framespacing="0" scrolling="no" allow="autoplay; encrypted-media; muted" allowfullscreen="true"></iframe></center> Code form Bilibili -->
    <div class="slideshow-container" id="slideshow-container">
    <div class="Slides fade">
-    <img id="m-silde" src="./Resources/Slideshowimg/J01.png" style="width:100%" alt="JERRY PRO">
+    <img id="m-silde" src="./Resources/J01.png" style="width:100%" alt="JERRY PRO">
    </div>
    </div>
    </div>
