--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <!-- <center class="play-ture" id="bilibili-player"><iframe style="width: 100%;height: 400px;" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=22822257&quality=0" frameborder="no" framespacing="0" scrolling="no" allow="autoplay; encrypted-media; muted" allowfullscreen="true"></iframe></center> Code form Bilibili -->
    <div class="slideshow-container" id="slideshow-container">
    <div class="Slides fade">
-    <img id="m-silde" src="./Resources/J01.png" style="width:100%" alt="JERRY PRO">
+    <img id="m-silde" src="./Resources/Slideshowimg/J01.png" style="width:100%" alt="JERRY PRO">
    </div>
    </div>
    </div>
