--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 <footer>
   <div class="bgimg-2">
     <div class="caption">
-    <span class="border">JERRY PRO :: Powered by JERRY, Copyright © 2022 JERRY 版權所有</span>
+    <span class="border">JERRY PRO :: Powered by JERRY❤️Koala, Copyright © 2022 JERRY 版權所有</span>
     </div>
   </div>
 </footer>
