--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
   <div class="pre-loder-index" id="pre-loder-index">
     <div class="pre-loder-main">
         <img src="./Resources/loader/loading-windows.gif" class="load-img" id="load-img" /><br/>
-        <h1>Almost Ready</h1>
+        <h1>Just a moment</h1>
     </div>
   </div>
 
