--- a/index.html
+++ b/index.html
@@ -288,8 +288,10 @@
 
   <div class="pre-loder-index" id="pre-loder-index">
     <div class="pre-loder-main">
-        <img src="./Resources/loader/loading-windows.gif" class="load-img" id="load-img" /><br/>
-        <h1>Just a moment</h1>
+      <video width="320" height="240" autoplay muted loop>
+        <source src="./Resources/loader/jerrypro-loader.mp4" type="video/mp4">
+      </video>
+        <!-- <h1>Just a moment</h1> -->
     </div>
   </div>
 
