--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
   <div class="pre-loder-index" id="pre-loder-index">
     <div class="pre-loder-main">
-      <video width="320" height="240" autoplay muted loop>
+      <video id="loder-mp4" width="320" height="240" autoplay muted loop>
         <source src="./Resources/loader/jerrypro-loader.mp4" type="video/mp4">
       </video>
         <!-- <h1>Just a moment</h1> -->
