--- a/index.html
+++ b/index.html
@@ -286,12 +286,9 @@
     </div>
   </div>
 
-  <div class="pre-loder-index" id="pre-loder-index">
+  <div class="pre-loder-index">
     <div class="pre-loder-main">
-      <video id="loder-mp4" width="320" height="240" autoplay muted loop>
-        <source src="./Resources/loader/jerrypro-loader.mp4" type="video/mp4">
-      </video>
-        <!-- <h1>Just a moment</h1> -->
+      <img src="./Resources/loader/jerrypro-loading.gif" class="load-img" id="load-img" />
     </div>
   </div>
   
