--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     </div>
   </div>
 
-  <div class="pre-loder-index">
+  <div class="pre-loder-index" id="pre-loder-index">
     <div class="pre-loder-main">
       <img src="./Resources/loader/jerrypro-loading.gif" class="load-img" id="load-img" />
     </div>
