--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           </div>
           <div>
             <p class="logText1">2022.10.08</p>
-            <p class="logText2">加入<a class="themeby">Theme By Cookies</a></p>
+            <p class="logText2">加入<a class="themeby">Theme For You</a></p>
           </div>
           <div>
             <p class="logText1">2022.10.11</p>
