--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
   <title>JERRY PRO :: (～￣▽￣)～</title>
   <meta charset="UTF-8">
+  <meta name="keywords" content="jerrypro" />
+  <meta
+    name="description"
+    content="A personal website about JERRY"
+  />
+  <meta name="author" content="JERRYPro" />
   <link rel="shortcut icon" type="image/ico" href="./icon.png">
   <!--Favicon for Chrome-->
   <link rel="apple-touch-icon" href="./icon.png">
@@ -229,7 +235,7 @@
           <div class="icon">
             <i class="fab fa-youtube" aria-hidden="true"></i>
           </div>
-          <a href="https://www.youtube.com/ldzmusic_studio" target="_blank">
+          <a href="https://www.youtube.com/channel/UCb4AAgayzeNgj01ULpDDzjg" target="_blank">
             <span>YouTube</span></a>
         </div>
         <div class="button">
